k8s/apps/storage/mysql/release.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mariadb:10.7
          # command: ["--innodb-flush-method=fsync"]
          resources:
            requests:
              memory: 1G
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: vol-storage-mysql
              mountPath: /var/lib/mysql
      volumes:
        - name: vol-storage-mysql
          persistentVolumeClaim:
            claimName: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - protocol: TCP
      name: mysql
      port: 3306
  selector:
    app: mysql
